tests/error/poly_errors/free_return_var.err
Error: Cannot infer type (at $FILE:17:8)
   | 
15 | @guppy(module)
16 | def main() -> None:
17 |     x = foo()
   |         ^^^^^ Cannot infer type variables in expression of type `?T`

Guppy compilation failed due to 1 previous error
